--- a/promo-32f100/index.html
+++ b/promo-32f100/index.html
@@ -22,21 +22,21 @@
 
 <body>
     <div class="container">
-        <div class="row" style="margin-top:3rem">
+        <div class="row" style="margin-top:1rem">
             <div class="col-sm-12 center">
-                <h1>Cari Kenalan Bule Yuk, Siapa Tau Dapat Jodoh
+                <h1>Jodoh Gak Usah Diramal, Cari Aja Disini
                     <br>
-                    <small>Lebih Dari 75 Juta Member Dari Eropa</small>
+                    <small>Bergabunglah Dengan Sosial Media Yang Dirancang Untuk Mempermudah Mencari Jodoh</small>
                 </h1>
 
                 <p class="lead">
-                    <span class="label label-danger">HANYA UNTUK YANG SERIUS</label>
+                    <span class="label label-danger">PERINGATAN: HANYA UNTUK YANG SERIUS</label>
                 </p>
                 <hr>
             </div>
         </div>
         <div class="row" style="margin-top:2rem">
-            <div class="col-sm-8">
+            <div class="col-sm-6">
                 <ul class="lst">
                     <li>
                         <span class="cpx">
@@ -44,30 +44,29 @@
                     </li>
                     <li>
                         <span class="cpx">
+                            <span style="color:#FF6600">13 Juta</span> Member Dari Indonesia
+                    </li>
+                    <li>
+                        <span class="cpx">
                             <span class="org">Verifikasi</span> Member Secara Manual
                     </li>
                     <li>
                         <span class="cpx">
-                            <span class="org">Mudah</span> Mendapatkan Kenalan
-                    </li>
-
-                    <li>
-                        <span class="cpx">
-                            <span style="color:#FF6600">Ruang Virtual</span> Untuk Anda & Pasangan</span>
+                            <span class="org">LEBIH Mudah</span> Mendapatkan Jodoh
                     </li>
                     <li>
                         <span class="cpx">
-                            <span style="color:#FF6600">Kerahasiaan</span> anda aman terjaga
+                            <span style="color:#FF6600">Kerahasiaan</span> aman terjaga
                     </li>
                 </ul>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <a href="/daftar" id="go1">
-                    <img src="maya.png" class="img-responsive img-thumbnail" >
+                    <img src="jdh.jpg" class="img-responsive img-thumbnail" style="margin-top:-0.8em">
                 </a>
                 <script>
                 document.getElementById("go1").onclick = function() {
-                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=fm';
+                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=fmg';
                     return false;
                 };
                 </script>
@@ -79,36 +78,15 @@
                 <p>
                     <strong>Hanya Untuk Yang Serius!</strong>
                 </p>
-                <a id="go2" href="/daftar" class="btn btn-danger" style="background-color:#ff6600; border-color:#ff6600">DAFTAR SEKARANG!</a>
+                <a id="go2" href="/daftar" class="btn btn-success" style="font-family:'oswald';font-size:2rem">DAFTAR SEKARANG!</a>
                 <script>
                 document.getElementById("go2").onclick = function() {
-                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=fm';
+                    window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=fmg';
                     return false;
                 };
                 </script>
-
             </div>
         </div>
-        <script type="text/javascript">
-    adroll_adv_id = "TUY6AWBDZVBLDAHQBCR7GJ";
-    adroll_pix_id = "XLNEIPAYG5B7ZN7DOFONVF";
-    (function() {
-        var oldonload = window.onload;
-        window.onload = function() {
-            __adroll_loaded = true;
-            var scr = document.createElement("script");
-            var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-            scr.setAttribute('async', 'true');
-            scr.type = "text/javascript";
-            scr.src = host + "/j/roundtrip.js";
-            ((document.getElementsByTagName('head') || [null])[0] ||
-                document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-            if (oldonload) {
-                oldonload()
-            }
-        };
-    }());
-    </script>
 </body>
 
 </html>
