--- a/promo-32m100/index.html
+++ b/promo-32m100/index.html
@@ -24,13 +24,13 @@
     <div class="container">
         <div class="row" style="margin-top:3rem">
             <div class="col-sm-12 center">
-                <h1>Dirancang Hanya Untuk Mencari Pasangan
+                <h1>Dirancang Untuk Mencari Selingkuhan
                     <br>
                     <small>Lebih Dari 14 Juta Member Wanita Dari Indonesia</small>
                 </h1>
 
                 <p class="lead">
-                    <span class="label label-success">BONUS PULSA Rp 100.000 UNTUK 100 PENDAFTAR YANG BERUNTUNG HARI INI</label>
+                    <span class="label label-danger">Peringatan: Hanya Untuk 21 Tahun Keatas</label>
                 </p>
                 <hr>
             </div>
@@ -42,15 +42,14 @@
                         <span class="cpx">
                             <span class="org">Gratis</span> Sekarang dan Selamanya
                     </li>
-                    <li>
-                        <span class="cpx">
-                            <span class="org">Verifikasi</span> Member Secara Manual
-                    </li>
-                    <li>
+                     <li>
                         <span class="cpx">
                             <span class="org">Mudah</span> Mendapatkan Pasangan
                     </li>
-
+                    <li>
+                        <span class="cpx">
+                            <span class="org">Kencan</span> Virtual Maupun Nyata
+                    </li>
                     <li>
                         <span class="cpx">
                             <span style="color:#FF6600">Ruang Virtual</span> Untuk Anda & Pasangan</span>
@@ -63,7 +62,7 @@
             </div>
             <div class="col-sm-4">
                 <a href="/daftar" id="go1">
-                    <img src="maya.png" class="img-responsive img-thumbnail" >
+                    <img src="maya.jpg" class="img-responsive img-thumbnail" style="margin-top:.5rem">
                 </a>
                 <script>
                 document.getElementById("go1").onclick = function() {
@@ -89,26 +88,6 @@
 
             </div>
         </div>
-        <script type="text/javascript">
-    adroll_adv_id = "TUY6AWBDZVBLDAHQBCR7GJ";
-    adroll_pix_id = "XLNEIPAYG5B7ZN7DOFONVF";
-    (function() {
-        var oldonload = window.onload;
-        window.onload = function() {
-            __adroll_loaded = true;
-            var scr = document.createElement("script");
-            var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-            scr.setAttribute('async', 'true');
-            scr.type = "text/javascript";
-            scr.src = host + "/j/roundtrip.js";
-            ((document.getElementsByTagName('head') || [null])[0] ||
-                document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-            if (oldonload) {
-                oldonload()
-            }
-        };
-    }());
-    </script>
 </body>
 
 </html>
